@@ -1,3 +1,4 @@
+wice_grid_custom_filter_params
 
 support for with_scope and with_exclusive_scope
 
